# django-xlsx-serializer

./: .codecov.yml  .editorconfig  .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  LICENSE  noxfile.py  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml  question-discussion.yml  refactoring-performance.yml
.github/workflows/: pre-commit-run.yml  pre-commit-update.yml  python-cd.yml  python-ci.yml  semantic-pull-request.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md
scripts/: format_nox_sessions.py  get_python_versions.py
src/xlsx_serializer/: __init__.py  apps.py  core.py
tests/: conftest.py  settings.py
tests/commands/: test_dumpdata.py  test_loaddata.py
tests/core/: test_deserializer.py  test_serializer.py
tests/fields/: test_auto_fields.py  test_boolean_fields.py  test_file_fields.py  test_numeric_fields.py  test_related_fields.py  test_string_fields.py  test_timestamp_fields.py  test_utility_fields.py
tests/models/: __init__.py  auto_fields.py  boolean_fields.py  dummy.py  file_fields.py  numeric_fields.py  related_fields.py  string_fields.py  timestamp_fields.py  utility_fields.py
